# euler

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  Caddyfile  LICENSE  Makefile  README.md  SECURITY.md  aliases.txt  authorizations.json  clean_up.sh  install.sh  mypy.ini  pyproject.toml  requirements.txt  setup.py  summary.md
.junie/: guidelines.md
docs/: access-control.md  auth-plan.md  authentication.md  authorization.md  authorizations.md  commands-index.md  convention_c_translation.md  convention_documentation.md  convention_python_solution.md  convention_source_documentation.md  convention_tags.md  convention_test_cases.md  developer-guide.md  gitfilter-guide.md  real-multi-tenant-web-access.md  secure-web-server.md  security-assessment.md  security-notes.md  server-redesign.md  site-design.md  site-map.md  solver-guide.md  syntax.md  tls-and-auth.md  tls-guide.md  tls-setup.md  user-guide.md  web-server-guide.md
euler/: check_modules.py  cli.py  evaluator.py  loader.py  logger.py  primes.py  sys_utils.py  template.py  types.py  utils.py
euler/cli/: __init__.py  cli.py
euler/evaluator/: __init__.py  evaluate.py  register.py
euler/maths/: arithmetic_series.py  collartz_sequence.py  fibonacci_numbers.py  graph_traversal.py  integer_partitions.py  interpolation.py  polynomial_numbers.py  primes.py  sets.py  sqrt.py  sum_digits.py  two_d_shapes.py
euler/misc/: word_to_num.py
euler/resources/: euler_problem_info.json
euler/setup/: __init__.py  ai_agent.py  base_dir.py  cached_requests.py  encryption.py  evaluate.py  module.py  paths.py  problems.py  py_module.py  register.py  requests.py  result.py  solution_info.py  solution_registry.py  summary.py  test_case.py
euler/utils/: cached_requests.py  color_codes.py  file_lock.py  human_readable_time.py  integer_partitions.py  interpolation.py  load_matrix.py  misc.py  polynomial_numbers.py  primes.py  roman_numerals.py  sqrt.py  two_d_shapes.py  word_to_num.py
euler_solver/: __main__.py  args.py  cli.py
euler_solver/c_libs/: __init__.py  _digits.pyi  _gen_primes_sieve_eratosthenes.pyi  _get_primes_sundaram_sieve.pyi  _is_prime.pyi  _num_partitions.pyi  _sum_of_digit_factorials.pyi  _sum_of_digits.pyi  build.py  build.sh  digit_factorial_chains.py  import_c_lib.py  integer_partitions.py  matrix_path_sums.py  p0014.py  p0074.py  p0078.py  p0084.py  p0095.py  p0097.py  p0109.py  p0110.py  p0111.py  p0642.py  primes.py  wrapper.py
euler_solver/framework/: __init__.py  c_lib.py  evaluate.py  file_lock.py  loader.py  logger.py  module.py  paths.py  register.py  requests.py  resource_limits.py  result.py  summary.py
euler_solver/lib_primes/: __init__.py  primes.c  primes.py
euler_solver/maths/: arithmetic_series.py  collartz_sequence.py  fibonacci_numbers.py  graph.py  graph_traversal.py  integer_partitions.py  interpolation.py  pandigital_numbers.py  polynomial_numbers.py  primes.py  sets.py  sqrt.py  su_doku.py
euler_solver/scripts/: commit-and-push.sh  sysdeps.sh
euler_solver/setup/: __init__.py  encryption.py  evaluate.py  file_lock.py  module.py  paths.py  patterns.py  register.py  requests.py  resource_limits.py  result.py  summary.py
euler_solver/utils/: human_readable_time.py  load_matrix.py  text_to_array.py
keys/: enc-key.json  keys.json  master_key.json  schema.json
projecteuler/: 001_multiples_of_3_and_5.py  002_even_fibonacci_numbers.py  003_largest_prime_factor.py  004_largest_palindrome_product.py  005_smallest_multiple.py  006_sum_square_difference.py  007_10001st_prime.py  008_largest_product_in_a_series.py  009_special_pythagorean_triplet.py  010_summation_of_primes.py  011_largest_product_in_a_grid.py  012_highly_divisible_triangular_number.py  013_large_sum.py  014_longest_collatz_sequence.py  015_lattice_paths.py  016_power_digit_sum.py  017_number_letter_counts.py  018_maximum_path_sum_I.py  019_counting_sundays.py  020_factorial_digit_sum.py  021_amicable_numbers.py  022_names_scores.py  023_non_abundant_sums.py  024_lexicographic_permutations.py  025_1000_digit_fibonacci_number.py  026_reciprocal_cycles.py  027_quadratic_primes.py  028_number_spiral_diagonals.py  029_distinct_powers.py  030_digit_fifth_powers.py  031_coin_sums.py  032_pandigital_products.py  033_digit_cancelling_fractions.py  034_digit_factorials.py  035_circular_primes.py  036_double_base_palindromes.py  037_truncatable_primes.py  038_pandigital_multiples.py  039_integer_right_triangles.py  040_champernowne's_constant.py  (+11 more)
scripts/: bash_completions.sh  setup_chrome.sh  setup_dev_env  setup_dev_env.sh  setup_pycharm_service.sh  setup_upgrade_service.sh  setup_venv.sh  upload_keys_to_origin.sh
scripts/c/: build.sh  compile.sh
scripts/fixes/: fix_pycharm_dimmed_issue.sh
scripts/git/: audit-private.sh  audit.sh  configure-identity.sh  publish.sh  (+2 more)
solutions/: .progress.html  history.csv  index.html  problems.json
solver/: __init__.py  __main__.py  backup.py  browser.py  cached_download.py  cli.py  cli_utils.py  commands.csv  commands.json  config.json  config.py  download.py  evaluate.py  key_exchange.py  main.py  modules.csv  parser.py  problems.py  projecteuler.py  results.py  session.py  shell.py  stack.py  template.html  utils.py  vault.py  version.py  workspace.py
summary/: summary.md
tests/: __init__.py  test_auth_kernel.py  test_auth_logout.py  test_auth_pages.py  test_auth_password.py  test_auth_routes.py  test_batch_tags.py  test_cache.py  test_cached_requests.py  test_command_authz.py  test_git_commands.py  test_integer_partitions.py  test_interpolation.py  test_logger.py  test_main.py  test_managed_config.py  test_misc.py  test_otp.py  test_pending.py  test_polynomial_numbers.py  test_primes.py  test_ratelimit.py  test_remember.py  test_roman_numerals.py  test_site.py  test_skill.py  test_sqrt.py  test_srp.py  test_srp_interop.py  test_tags.py  test_tickets.py  test_two_d_shapes.py  test_update_doc.py  test_user_service.py  test_users.py  test_validate.py  test_vault.py  test_web_channel.py  test_web_verbs.py  test_ws.py  (+1 more)
topics/: articles.json  prime-numbers.md  tags.json
(+29319 files in other folders)
