[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solver"
version = "0.1.0"
description = "Interactive shell for solving and managing Project Euler problems"
authors = [{ name = "Vikas Munshi", email = "vikas.munshi@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4",
    "cryptography",
    "flake8",
    "mypy",
    "prompt-toolkit",
    "python-dotenv",
    "requests",
    "rich",
    "types-requests",
]

[project.optional-dependencies]
ai = [
    "anthropic",
]
dev = [
    "autoflake",
    "autopep8",
    "black",
    "isort",
]
show = [
    "matplotlib",
    "PyQt5",
]
web = [
    # The app-service stack (DD-5): aiohttp is the one framework across the app
    # services; Jinja2 (via aiohttp-jinja2, autoescape on) replaces homegrown
    # string templating. Deployed by scripts/setup/auth.sh into the root-owned
    # /opt/euler system venv the euler-* services run from.
    "aiohttp",
    "aiohttp-jinja2",
    "jinja2",
    # The `.html` save gate (DD-10, Phase 5c): sanitize-and-store-clean. The
    # cp38-abi3 stable-ABI wheel installs on 3.14 with no Rust toolchain;
    # content.sh's deploy/status checks verify the import in the system venv.
    "nh3",
]
solutions = [
    # NOTE: `pip install primesieve` builds only the base extension; its optional
    # `primesieve.numpy` extension must be built from source against NumPy 2.x via
    # ./scripts/setup/primesieve_numpy_extension.sh (see [tool.setup.primesieve-numpy]).
    # cython / numpy / setuptools below are the build deps that script relies on.
    "cython",
    "mpmath",
    # Floor at 2.5 so every venv converges forward, not drifts: unpinned, the operator
    # resolved 2.4.6 while the deployed /opt/euler venv resolved 2.5.1, and 2.5's stubs
    # type np.cumsum/np.frombuffer as an unbound generic — so the same numpy-typed
    # solutions passed mypy on one venv and failed on the other. The solutions now carry
    # explicit annotations for 2.5; the floor keeps every venv on that stub contract.
    "numpy>=2.5",
    "primesieve",
    "setuptools",
]


# System-level dependencies (apt) required before `pip install`.
# Install with: ./scripts/setup_dev_env.sh install python primesieve c
#
#   python      — Python 3.14 runtime + venv (via ppa:deadsnakes/ppa)
#   primesieve  — primesieve, libprimesieve-dev (required to build primesieve)
#   c           — gcc, build-essential, etc. (required to compile C extensions)
[tool.setup.system-dependencies]
script = "./scripts/setup/dev_env.sh"
targets = ["python", "primesieve", "c"]
apt = [
    "python3.14",
    "python3.14-dev",
    "python3.14-venv",
    "primesieve",
    "libprimesieve-dev",
    "build-essential",
    "gcc",
]

# Post-install build of the optional `primesieve.numpy` extension.
# The PyPI sdist ships a NumPy-1.x-era pre-generated C++ that won't compile under
# NumPy 2.x, so the extension is re-Cythonized and installed from source.
# Run with: ./scripts/setup/primesieve_numpy_extension.sh install
[tool.setup.primesieve-numpy]
script = "./scripts/setup/primesieve_numpy_extension.sh"
actions = ["install", "check", "uninstall"]

[project.scripts]
# NOTE: no solver-web script — the web services are systemd units run from the
# /opt/euler system venv (python -m solver.web.<svc>, DD-3/DD-5), not a
# detached-process CLI.
solver = "solver.main:main"
solver-gitfilter = "solver.crypto.gitfilter:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["solver*"]

[tool.setuptools.package-data]
solver = ["*.html"]
"solver.web" = ["templates/*.html"]  # Jinja pages ship inside the deployed venv (DD-5)
"solver.web.site" = ["templates/*.html"]  # content-service pages (Phase 5)
"solver.templates" = ["authorizations.json"]  # the default RBAC policy ladder (DD-12)
