[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solver"
# The version is read at build time from `solver/version.py` (see
# [tool.setuptools.dynamic] below) and frozen into the wheel metadata. That file
# is the single source of truth and is written only by scripts/version/release.sh,
# which bumps it and tags `vX.Y.Z` together — never hand-edit a number here.
dynamic = ["version"]
description = "Interactive shell for solving and managing Project Euler problems"
authors = [{ name = "Vikas Munshi", email = "vikas.munshi@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4",
    "cryptography",
    "flake8",
    "mypy",
    "prompt-toolkit",
    "python-dotenv",
    "requests",
    "rich",
    "types-requests",
]

[project.optional-dependencies]
ai = [
    "anthropic",
]
dev = [
    "autoflake",
    "autopep8",
    "black",
    "isort",
]
show = [
    "matplotlib",
    "PyQt5",
]
web = [
    # The app-service stack: aiohttp is the one framework across the app
    # services; Jinja2 (via aiohttp-jinja2, autoescape on) replaces homegrown
    # string templating. Deployed by scripts/setup/auth.sh into the root-owned
    # /opt/euler system venv the euler-* services run from.
    "aiohttp",
    "aiohttp-jinja2",
    "jinja2",
    # The `.html` save gate (Phase 5c): sanitize-and-store-clean. The
    # cp38-abi3 stable-ABI wheel installs on 3.14 with no Rust toolchain;
    # content.sh's deploy/status checks verify the import in the system venv.
    "nh3",
]
solutions = [
    # NOTE: `pip install primesieve` builds only the base extension; its optional
    # `primesieve.numpy` extension must be built from source against NumPy 2.x via
    # ./scripts/setup/primesieve_numpy_extension.sh (see [tool.setup.primesieve-numpy]).
    # cython / numpy / setuptools below are the build deps that script relies on.
    "cython",
    "mpmath",
    "numpy",
    "primesieve",
    "setuptools",
]


# System-level dependencies (apt) required before `pip install`.
# Install with: ./scripts/setup_dev_env.sh install python primesieve c
#
#   python      — Python 3.14 runtime + venv (via ppa:deadsnakes/ppa)
#   primesieve  — primesieve, libprimesieve-dev (required to build primesieve)
#   c           — gcc, build-essential, etc. (required to compile C extensions)
[tool.setup.system-dependencies]
script = "./scripts/setup/dev_env.sh"
targets = ["python", "primesieve", "c"]
apt = [
    "python3.14",
    "python3.14-dev",
    "python3.14-venv",
    "primesieve",
    "libprimesieve-dev",
    "build-essential",
    "gcc",
]

# Post-install build of the optional `primesieve.numpy` extension.
# The PyPI sdist ships a NumPy-1.x-era pre-generated C++ that won't compile under
# NumPy 2.x, so the extension is re-Cythonized and installed from source.
# Run with: ./scripts/setup/primesieve_numpy_extension.sh install
[tool.setup.primesieve-numpy]
script = "./scripts/setup/primesieve_numpy_extension.sh"
actions = ["install", "check", "uninstall"]

[project.scripts]
# NOTE: no solver-web script — the web services are systemd units run from the
# /opt/euler system venv (python -m solver.web.<svc>), not a
# detached-process CLI.
solver = "solver.main:main"
solver-gitfilter = "solver.crypto.gitfilter:main"

[tool.setuptools.dynamic]
# Read the version straight from the tracked `solver/version.py` (`__version__`,
# a plain string literal setuptools parses without importing the package). No git
# at build time — the deployed venv (/opt/euler/venv) builds identically to a dev
# `pip install`, and `importlib.metadata.version("solver")` returns this number.
version = { attr = "solver.version.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["solver*"]

[tool.setuptools.package-data]
solver = ["*.html"]
"solver.web" = [
    "templates/*.html",      # Jinja pages ship inside the deployed venv
    # The start page's README. A build artifact copied from the root README.md by
    # setup.py's build_py hook — root stays the source of truth. It ships because
    # euler-auth renders the start page from /opt/euler with no clone to read.
    "content/README.md",
]
"solver.web.site" = ["templates/*.html"]  # content-service pages (Phase 5)
